[package]
name = "yat-rack"
version = "0.1.64"
authors = ["Dylan Whyte <dylantwhyte@proton.me>"]
description = "A library for creating (modular) synthesizers"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.3"
