[package]
name = "yat"
version = "0.1.64"
authors = ["Dylan Whyte <dylantwhyte@proton.me>"]
description = "A rust-based TUI modular synthesizer"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yat-rack = { path = "../yat-rack" }
cpal = "0.13.4"
hashbrown = "0.12.3"
tui = "0.19.0"
crossterm = "0.25.0"
unicode-width = "0.1"
